# analytix

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/sample/: example.json
src/analytix/: __init__.py  main.py
src/analytix/api/: routes.py
src/analytix/models/: schemas.py
src/analytix/utils/: config.py  stats.py
tests/: test_api.py  test_stats.py
